# nova_compiler

./: A21-Ark_Sina_Compilers.doc  README.md
code/: CMakeCache.txt  CMakeLists.txt  Compiler  Compilers.c  Compilers.h  MainReader.c  MainScanner.c  Makefile  Reader.c  Reader.h  Scanner.c  Scanner.h  cmake_install.cmake
input/: A12.bat  A12.sh  A22.bat  Compiler  INPUT1_Hello.nova  INPUT2_Volume.nova  INPUT3_Factorial.nova  INPUT4_Datatypes.nova  INPUT5_General.nova  INPUT6_Big.nova  README.txt
